--- a/asistencia/templates/asistencia/base.html
+++ b/asistencia/templates/asistencia/base.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Sistema de Asistencia{% endblock %}</title>
     <!-- Favicon -->
-    <link rel="icon" href="{% static 'media/LogoTeleton.png' %}" type="image/x-icon">
+    <img src="{% static 'asistencia/media/LogoTeleton.png' %}" alt="Logo" width="120">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
